--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,12 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
+  "description": "Fundamentos NodeJs RocketSeat",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Luiz Garbini Neto",
+  "license": "ISC"
 }
