--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "main": "src/server.js",
+  "type": "module",
   "description": "Fundamentos NodeJs RocketSeat",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
